<resources>
    <string name="app_name">Telly job</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ed_fullName">Enter Full Name</string>
    <string name="ed_career">Select Career</string>
    <string name="ed_specification">Enter Specification</string>
    <string name="ed_phone">Enter Phone Number</string>
    <string name="ed_address">Enter Address</string>
    <string name="ed_city">Select City</string>
    <string name="ed_country">Select Country</string>
    <string name="ed_attach_image">Attach ID Career Image</string>
    <string name="btn_save_profile">Save</string>
    <string name="btn_next_profile">Next</string>
    <string name="comment_of_post">Comments of Post</string>
    <string name="image_post_name">Image of Post</string>
    <string name="ed_email">Enter Email</string>
    <string name="ed_password">Enter Password</string>
    <string name="ed_con_password">Confirm Password</string>
    <string name="description_text_register">Reach to the top</string>
    <string name="btn_register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="description">Find best workers</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="btn_login">Log in</string>
    <string name="action_edit">Edit Profile</string>
    <string name="action_become_worker">Become Worker</string>
    <string-array name="careers">
        <item>Medical Doctor</item>
        <item>Web Developer</item>
        <item>Android Developer</item>
        <item>Artificial Intelligence</item>
        <item>Analyst</item>
        <item>Dentist</item>
        <item>Programmer</item>
        <item>Engineer</item>
        <item>Pharmacist</item>
        <item>Company</item>
        <item>Worker</item>
        <item>Accountant</item>
        <item>Designer</item>
        <item>Barber</item>
        <item>Technical</item>
        <item>Baker</item>
        <item>Mechanist</item>
        <item>Chef</item>
        <item>Carpenter</item>
        <item>Business Man</item>
        <item>Biologist</item>
        <item>Scientist</item>
        <item>Builder</item>
        <item>chemist</item>
        <item>Agriculturist</item>
        <item>Agricultural</item>
        <item>Lawyer</item>
        <item>Teacher</item>
        <item>Driver</item>
        <item>Photographer</item>
        <item>Pilot</item>
        <item>Trainer</item>
        <item>Diver</item>
        <item>Journalist</item>
        <item>secretary</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_search">Search Workers</string>
    <string name="menu_report">Report</string>
    <string name="menu_review">Review</string>
    <string name="main_first">Main Activities</string>
    <string name="main_second">App Reviews</string>
    <string name="image_career">Image Career</string>
    <string name="image_post">Image Post</string>
    <string name="send_btn">Send</string>
    <string name="attach_image_post">Image</string>
    <string name="write_something">Write Something?</string>
    <string name="complaint_report">Write your complaint?</string>
    <string name="make_new_account">Make a new account</string>
    <string name="shaglni_team">Telly job Team</string>
    <string name="search_career_worker">Search now about the job that you want</string>
    <string name="app_issues">Attach a picture of issues or bugs (Optional)</string>
    <string name="text_forget_one">Reset password by enter your email</string>
    <string name="text_forget_two">Will send a message to your email,</string>
    <string name="text_forget_three">to reset password</string>
    <string name="text_forget_four">If you forget your email,</string>
    <string name="email_forget">Enter Your Email</string>
    <string name="reset_btn">Reset</string>
    <string name="career_not_found">This career not found</string>
    <string name="admin">Admin</string>
    <string name="reports">Reports and Reviews</string>
    <string name="reviews">Reviews App</string>
    <string name="search_accounts">Search Accounts</string>
    <string name="reports_workers_admin">Reports Workers</string>
    <string name="reports_users_admin">Reports Users</string>
    <string name="reports_app_admin">Reports App</string>
    <string name="reports_comments_admin">Reports Comments</string>
    <string name="reports_posts_admin">Reports Posts</string>
    <string name="app_main">Admin and Data</string>
    <string name="statistics">Statistics App</string>
    <string name="text_report_one">You can help us to improve the application,
        by telling us any debugs or issues, these will appear in the application</string>
    <string name="text_report_three">Please write your report clearly</string>
    <string name="text_review_one">You can help us to increase the users,</string>
    <string name="text_review_two">that will use the application</string>
    <string name="text_review_three">Rate App Now</string>
    <string name="text_review_four">Please write your review clearly</string>
</resources>