<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/main_first">

        <menu>

            <group
                android:id="@+id/first"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/home"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:title="@string/menu_home" />

                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/ic_baseline_account_circle_24"
                    android:title="@string/menu_profile" />


                <item
                    android:id="@+id/search"
                    android:icon="@drawable/ic_users_group"
                    android:title="@string/menu_search" />

            </group>

        </menu>

    </item>


    <item android:title="@string/main_second">

        <menu>

            <group
                android:id="@+id/second"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/review"
                    android:icon="@drawable/ic_baseline_rate_review_24"
                    android:title="@string/menu_review" />

                <item
                    android:id="@+id/report"
                    android:icon="@drawable/ic_baseline_report_24"
                    android:title="@string/menu_report" />

            </group>
        </menu>

    </item>

</menu>