<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ForgetPasswordActivity">

    <RelativeLayout
        android:id="@+id/relative_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >


        <ImageButton
            android:id="@+id/arrow_btn_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_search"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@string/image_post" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_marginStart="@dimen/_55sdp"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/review3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_70sdp"
                android:layout_gravity="center"
                android:text="@string/shaglni_team"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/text_forget_one"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16ssp"
                />

            <TextView
                android:id="@+id/review5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_forget_two"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_3sdp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16ssp"
                />

            <TextView
                android:id="@+id/review6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/text_forget_three"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16ssp"
                />

            <TextView
                android:id="@+id/review4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_gravity="center"
                android:text="@string/text_forget_four"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16ssp"
                />

            <TextView
                android:id="@+id/review2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/make_new_account"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16ssp"
                />

            <EditText
                android:id="@+id/ed_email_fg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputs_bg"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="@string/email_forget"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_18sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="normal"
                android:autofillHints="false" />

            <Button
                android:id="@+id/reset_password_btn"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/reset_btn"
                android:textSize="@dimen/_20ssp"
                android:textAllCaps="false"
                android:background="@drawable/buttons"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/_25sdp"
                />



        </LinearLayout>

    </ScrollView>



</LinearLayout>