<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_frag_report"
    android:background="@color/white"
    android:padding="@dimen/_8sdp"
    tools:context=".FragmentReport"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <TextView
        android:id="@+id/review3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center"
        android:text="@string/shaglni_team"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center"
        android:text="@string/text_report_one"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        />

    <TextView
        android:id="@+id/review2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/text_report_three"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        />

    <EditText
        android:id="@+id/report_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs_bg"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:maxLength="256"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/black"
        android:padding="@dimen/_18sdp"
        android:textSize="@dimen/_17sdp"
        android:hint="@string/complaint_report"
        android:autofillHints="false" />


        <Button
            android:id="@+id/btn_report_image_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/inputs_bg"
            android:padding="@dimen/_10sdp"
            android:text="@string/app_issues"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            />


            <ImageView
                android:id="@+id/image_report_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/attach_image_post" />

    <Button
        android:id="@+id/send_btn_rp_app"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/send_btn"
        android:layout_gravity="center"
        android:background="@drawable/buttons"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:layout_marginBottom="@dimen/_20sdp"
        />

        </LinearLayout>

    </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>