<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_review"
    android:background="@color/white"
    android:padding="@dimen/_8sdp"
    tools:context=".FragmentReview"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/review3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center"
        android:text="@string/shaglni_team"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/text_review_one"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        />

    <TextView
        android:id="@+id/review4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_review_two"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_3sdp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        />

    <TextView
        android:id="@+id/review6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_review_three"
        android:textAlignment="center"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        />

    <RatingBar
        android:id="@+id/rating_app"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="0.5"
        />

    <TextView
        android:id="@+id/review2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/text_review_four"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        />

    <EditText
        android:id="@+id/review_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs_bg"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:maxLength="256"
        android:textColor="@color/black"
        android:padding="@dimen/_18sdp"
        android:textSize="@dimen/_17ssp"
        android:hint="@string/write_something"
        android:autofillHints="false" />

    <Button
        android:id="@+id/send_btn_rv"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/send_btn"
        android:layout_gravity="center"
        android:background="@drawable/buttons"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"/>


        </LinearLayout>

    </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>