<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentSearchWorker"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/all_careers_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_career_not_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_240sdp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/career_not_found"
                    />


        </LinearLayout>


        <ImageView
            android:id="@+id/image_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_240sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_110sdp"
            android:src="@drawable/search_def"
            android:contentDescription="@string/image_career" />

        <TextView
            android:id="@+id/text_search_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/image_search_icon"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/_15ssp"
            android:layout_marginStart="@dimen/_15ssp"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/search_career_worker"
            />

</RelativeLayout>